# LiquidGlassDemo

./: BUILD_AND_RUN.md  CMakeLists.txt  FIX_LINK_ERROR.md  INSTALL.txt  LiquidGlassDemo.sln  LiquidGlassDemo.vcxproj  LiquidGlassDemo.vcxproj.filters  MANUAL_INSTALL.md  QUICK_START.md  README.md  build.bat  fix_vcpkg_path.bat  install.ps1  install_simple.bat  setup_dependencies.bat  test_android_implementation.cpp  test_glass_effect.cpp  verify_setup.bat
backgrounds/: README.md
docs/: android_implementation_guide.md  background_guide.md  liquid_glass_tutorial.md  rotation_control.md
include/: BackgroundCapture.h  BackgroundRenderer.h  Camera.h  LiquidGlass.h  SDFGenerator.h  Shader.h  TextureLoader.h  stb_image.h
shaders/: android_liquid_glass.frag  liquid_glass.frag  liquid_glass.vert  liquid_glass_enhanced.frag  liquid_glass_realistic.frag  sdf_generator.frag  sdf_generator.vert
src/: BackgroundCapture.cpp  BackgroundRenderer.cpp  Camera.cpp  LiquidGlass.cpp  SDFGenerator.cpp  Shader.cpp  TextureLoader.cpp  main.cpp
